--- a/projects/ugly-things/src/App.css
+++ b/projects/ugly-things/src/App.css
@@ -1,20 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #4e5f81;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +7,113 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.uList h2 {
+  display: flex;
+  justify-content: start;
+  align-content: start;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-self: flex-start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-weight: 600;
+}
+
+h2 {
+  font-weight: 500;
+}
+
+h3 {
+  margin: 0%;
+}
+
+p {
+  margin: 5px;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: start;
+  justify-items: start;
+}
+
+.head{
+  background-image: linear-gradient(180deg, rgba(96,196,209,1), rgba(78,95,129,1));
+  min-width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.editInputs {
+  display: grid;
+  row-gap: 5px;
+  margin-top: 5px;
+}
+
+.editForm{
+  display: flex;
+}
+
+.thing {
+  display: flex;
+  flex-direction: column;
+  column-gap: 5px;
+  padding: 10px;
+}
+
+.thing img {
+  max-width: 300px;
+  max-height: 350px;
+}
+
+form.thing{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  row-gap: 5px;
+  column-gap: 5px;
+
+}
+
+form input {
+  border-radius: 5px;
+  border: 1px black solid;
+  background-color: rgba(96,196,209,1);
+  width: 200px;
+}
+
+form button{
+  width: 206px;
+}
+
+button.deleteBtn {
+  padding: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  width: 100%;
+}
+button.deleteBtn:hover {
+  background-color: rgb(255, 80, 80);
+}
+
+button {
+  display: grid;
+  border:1px black solid;
+  background-color: rgba(96,196,209,1);
+  border-radius: 5px;
+}
+
+form button:hover {
+  background-color: seagreen;
+}
+
+form input::placeholder{
+  color: black;
+  text-align: center;
 }
