--- a/projects/dnd-character-creator/src/App.css
+++ b/projects/dnd-character-creator/src/App.css
@@ -1,38 +1,96 @@
-.App {
+nav {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  background-color: #584b53;
+  padding: 15px;
+  text-decoration:none ;
+  font-size: larger;
+  font-weight:600;
+  column-gap: 10px;
+}
+nav a {
+  display: flex;
+  font-size: 30px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-decoration: none;
+  color: #efdfbb;
+  padding: 10px ;
+  background-color: #9d5c63;
+  border-radius: 5px;
+}
+
+p {
+  font-size: larger;
+  font-weight: 600;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 900px;
+  margin: auto;
+  padding: 30px;
+  row-gap: 20px;
 }
+form button{
+  margin: auto;
+  grid-column: 1/4;
+}
+#stats {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column: 1/4;
+  margin: auto;
+  width: 100%;
+  justify-items: center;
+  row-gap: 20px;
+}
+body{
+  background-color: #d6e3f8;
+}
+#stats div {
+  border: 1.5px solid #9d5c63 ;
+  border-radius: 5px;
+  padding: 5px;
+}
+input {
+  padding: 10px;
+  font-size: 20px;
+  width: 100%;
+  max-width: 200px;
+}
+select {
+  padding: 10px;
+  font-size: 20px;
+  width: 250px;
+}
+@media screen and (max-width: 821px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:fit-content;
+    padding: 20px 0;
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  #stats {
+    grid-template-columns: 1fr 1fr;
+    width:fit-content;
+    column-gap: 20px;;
+  }
+
+  nav {
+    flex-direction: column;
+    row-gap: 5px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 500px) {
+  input {
+    max-width: 100px;
   }
 }
