--- a/assaingments/css-gradient-code-generator/src/App.css
+++ b/assaingments/css-gradient-code-generator/src/App.css
@@ -3,9 +3,9 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  border: 2px solid black;
+  border: none;
+  margin: 10px;
 }
-
 #colorImg {
   height: 300px;
   width: 300px;
@@ -16,15 +16,41 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
+  background-color: whitesmoke;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.options {
+.option {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
+  flex-direction: row;
 }
-
+.option h3 {
+  padding: 10px;
+}
 textarea {
   min-width: 400px;
   min-height: 150px;
+}
+.inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+button {
+  border: none;
+  background-color: rgba(0, 179, 255, 100);
+  font-size: large;
+  color: white;
+  border-radius: 5px;
+}
+button:hover {
+  background-color: rgba(0,8,255,1);
+}
+.Text{
+  justify-items: center;
+  margin-left: 15px;
 }
